awscdk/devmysitecomstackVpcA494BB14.nested.template.json
{
  "Resources": {
    "Vpc8378EB38": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "dev-mysite-com-stack/Vpc/Vpc"
          },
          {
            "Key": "StackName",
            "Value": "dev-mysite-com"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/Resource"
      }
    },
    "VpcPublicSubnet1Subnet5C2D37C4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/24",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "dev-mysite-com-stack/Vpc/Vpc/PublicSubnet1"
          },
          {
            "Key": "StackName",
            "Value": "dev-mysite-com"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/PublicSubnet1/Subnet"
      }
    },
    "VpcPublicSubnet1RouteTable6C95E38E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "dev-mysite-com-stack/Vpc/Vpc/PublicSubnet1"
          },
          {
            "Key": "StackName",
            "Value": "dev-mysite-com"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/PublicSubnet1/RouteTable"
      }
    },
    "VpcPublicSubnet1RouteTableAssociation97140677": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "VpcPublicSubnet1DefaultRoute3DA9E72A": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "DependsOn": [
        "VpcVPCGWBF912B6E"
      ],
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/PublicSubnet1/DefaultRoute"
      }
    },
    "VpcPublicSubnet2Subnet691E08A3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "dev-mysite-com-stack/Vpc/Vpc/PublicSubnet2"
          },
          {
            "Key": "StackName",
            "Value": "dev-mysite-com"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/PublicSubnet2/Subnet"
      }
    },
    "VpcPublicSubnet2RouteTable94F7E489": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "dev-mysite-com-stack/Vpc/Vpc/PublicSubnet2"
          },
          {
            "Key": "StackName",
            "Value": "dev-mysite-com"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/PublicSubnet2/RouteTable"
      }
    },
    "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489"
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet2Subnet691E08A3"
        }
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "VpcPublicSubnet2DefaultRoute97F91067": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "DependsOn": [
        "VpcVPCGWBF912B6E"
      ],
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/PublicSubnet2/DefaultRoute"
      }
    },
    "VpcIsolatedSubnet1SubnetE48C5737": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.0/24",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "dev-mysite-com-stack/Vpc/Vpc/IsolatedSubnet1"
          },
          {
            "Key": "StackName",
            "Value": "dev-mysite-com"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/IsolatedSubnet1/Subnet"
      }
    },
    "VpcIsolatedSubnet1RouteTable4771E3E5": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "dev-mysite-com-stack/Vpc/Vpc/IsolatedSubnet1"
          },
          {
            "Key": "StackName",
            "Value": "dev-mysite-com"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/IsolatedSubnet1/RouteTable"
      }
    },
    "VpcIsolatedSubnet1RouteTableAssociationD300FCBB": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIsolatedSubnet1RouteTable4771E3E5"
        },
        "SubnetId": {
          "Ref": "VpcIsolatedSubnet1SubnetE48C5737"
        }
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/IsolatedSubnet1/RouteTableAssociation"
      }
    },
    "VpcIsolatedSubnet2Subnet16364B91": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.3.0/24",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "dev-mysite-com-stack/Vpc/Vpc/IsolatedSubnet2"
          },
          {
            "Key": "StackName",
            "Value": "dev-mysite-com"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/IsolatedSubnet2/Subnet"
      }
    },
    "VpcIsolatedSubnet2RouteTable1D30AF7D": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "dev-mysite-com-stack/Vpc/Vpc/IsolatedSubnet2"
          },
          {
            "Key": "StackName",
            "Value": "dev-mysite-com"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/IsolatedSubnet2/RouteTable"
      }
    },
    "VpcIsolatedSubnet2RouteTableAssociationF7B18CCA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIsolatedSubnet2RouteTable1D30AF7D"
        },
        "SubnetId": {
          "Ref": "VpcIsolatedSubnet2Subnet16364B91"
        }
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/IsolatedSubnet2/RouteTableAssociation"
      }
    },
    "VpcIGWD7BA715C": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "dev-mysite-com-stack/Vpc/Vpc"
          },
          {
            "Key": "StackName",
            "Value": "dev-mysite-com"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/IGW"
      }
    },
    "VpcVPCGWBF912B6E": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "InternetGatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "dev-mysite-com-stack/Vpc/Vpc/VPCGW"
      }
    }
  },
  "Outputs": {
    "devmysitecomstackVpcPublicSubnet1Subnet941F830ARef": {
      "Value": {
        "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
      }
    },
    "devmysitecomstackVpcPublicSubnet2SubnetD8939549Ref": {
      "Value": {
        "Ref": "VpcPublicSubnet2Subnet691E08A3"
      }
    },
    "devmysitecomstackVpc8106B855Ref": {
      "Value": {
        "Ref": "Vpc8378EB38"
      }
    },
    "devmysitecomstackVpc8106B855DefaultSecurityGroup": {
      "Value": {
        "Fn::GetAtt": [
          "Vpc8378EB38",
          "DefaultSecurityGroup"
        ]
      }
    },
    "devmysitecomstackVpcIsolatedSubnet1SubnetDCCE15C8Ref": {
      "Value": {
        "Ref": "VpcIsolatedSubnet1SubnetE48C5737"
      }
    },
    "devmysitecomstackVpcIsolatedSubnet2Subnet44DEA593Ref": {
      "Value": {
        "Ref": "VpcIsolatedSubnet2Subnet16364B91"
      }
    }
  }
}
